--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@nuxtjs/i18n": "^9.5.4",
+    "axios": "^1.9.0",
     "nuxt": "^3.17.0",
+    "sweetalert2": "^11.21.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
     "vue3-carousel": "^0.15.1"
