--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@nuxtjs/i18n": "^9.5.4",
+    "@pinia/nuxt": "^0.11.0",
     "axios": "^1.9.0",
     "nuxt": "^3.17.0",
+    "pinia": "^3.0.2",
     "sweetalert2": "^11.21.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
