--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@nuxtjs/i18n": "^9.5.4",
+    "@nuxtjs/seo": "^3.0.3",
+    "@nuxtjs/sitemap": "^7.3.0",
     "@pinia/nuxt": "^0.11.0",
     "axios": "^1.9.0",
     "nuxt": "^3.17.0",
